Day 10 converted to Grid<T> class